--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-site-verification" content="ZioSxVgAbFHzHdl2YiNwPkTLsDF-U_WVskidld0FWpw" />
   <meta name="google-site-verification" content="YhmOMV3xAfbCT5Y_u6Y2To3Eyi7UluwzfdUKfdCotCg" />
   <title>Team Unity Ghana — Official Site</title>
   <meta name="description" content="Official website for Team Unity Ghana — music, videos, shows, and contact." />
